--- a/shweb/static/css/mobile/home.css
+++ b/shweb/static/css/mobile/home.css
@@ -2,11 +2,44 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 5vh;
     width: 100%;
 }
 
 .main-page-photo {
     width: 100%;
+    height: auto;
+}
+
+.main-release {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 12vh;
+    gap: 5vh;
+}
+
+.main-release img {
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
+}
+
+
+.main-release-tittle {
+    padding-left: 5%;
+    padding-right: 5%;
+    text-align: center;
+    font-size: 22px;
+    color: black;
+}
+
+.main-page-photo {
+    width: 100%;
+    height: auto;
+}
+
+.main-release-photo {
+    width: 50vh;
     height: auto;
 }
