--- a/shweb/static/css/mobile/release.css
+++ b/shweb/static/css/mobile/release.css
@@ -7,7 +7,6 @@ pre {
 }
 
 .content {
-    margin-top: 5vh;
     background-color: rgba(0, 0, 0, 0.4);
     display: flex;
     flex-direction: column;
@@ -153,4 +152,14 @@ pre {
 .expand-more {
     transform: rotate(-180deg);
     transition: transform 0.2s linear;
+}
+
+.explicit {
+    display: inline-block;
+    vertical-align:middle;
+}
+
+.explicit-icon {
+    height: 20px;
+    max-width: 100%;
 }
