--- a/shweb/static/css/mobile/style.css
+++ b/shweb/static/css/mobile/style.css
@@ -39,20 +39,34 @@ body {
     /* filter: invert(73%) sepia(30%) saturate(340%) hue-rotate(314deg) brightness(300%) contrast(50%); */
 }
 
+.header {
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(23,23,23,255);
+    position: fixed;
+    width: 100%;
+    height: 8vh;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+}
+
 .bandlogo {
-    display: block;
-    padding-top: 5vh;
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
+    height: 6vh;
+    filter: invert(100%);
+}
+
+.header + .content {
+    padding-top: 10vh;
 }
 
     .ham {
         position: fixed;
         z-index: 100;
-        top: 3vh;
+        top: 2vh;
+        width: 13%;
         right: 3%;
-        width: 15%;
         border: transparent;
         background-color: Transparent;
         cursor: pointer;
@@ -60,7 +74,6 @@ body {
 
     .menuIcon {
         width: 100%;
-        filter: invert(100%);
     }
 
     .xIcon {
@@ -69,21 +82,22 @@ body {
     }
 
         .menu {
+            z-index: 99;
             margin: 0;
             padding: 0;
+            padding-top: 10vh;
             position: fixed;
             top: 0;
             left: 0;
             right: 0;
             bottom: 0;
             width: 100%;
-            height: 100vh;
-            background: black;
+            /* height: 100vh; */
+            background: rgba(23,23,23,255);
             color: white;
             transform: translateY(-100%);
             transition: transform 0.2s;
             list-style: none;
-            padding-top: 1rem;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -96,7 +110,7 @@ body {
         }
 
             .dropdown-content {
-                width: 80%;
+                overflow-y: scroll;
                 display: none;
             }
 
@@ -119,7 +133,7 @@ body {
 
             .nav-link {
                 padding-left: 10%;
-                font-size: 6vh;
+                font-size: 5vh;
                 text-align: center;
                 text-decoration: none;
             }
@@ -132,7 +146,7 @@ body {
             .show {display: block;}
 
             .links-container a {
-                padding-left: 25%;
+                padding-left: 15%;
                 font-size: 4vh;
                 text-decoration: none;
                 padding-top: 1vh;
@@ -143,7 +157,7 @@ body {
             .nav-div {
                 padding: 0;
                 padding-left: 10%;
-                font-size: 6vh;
+                font-size: 5vh;
                 text-decoration: none;
                 display: block;
                 border: none;
@@ -156,12 +170,13 @@ body {
 
             .social-links {
                 padding: 0;
+                padding-left: 20%;
                 text-align: center;
-                width: 100%;
+                width: 60%;
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: center;
-                padding-bottom: 20vh;
+                padding-bottom: 6vh;
             }
 
             .social-links li {
@@ -169,10 +184,10 @@ body {
             }
 
             .social {
-                margin-top: 3vh;
+                margin-top: 1vh;
                 margin-left: 1%;
                 margin-right: 1%;
-                margin-bottom: 3vh;
+                margin-bottom: 1vh;
                 height: 5vh;
                 width: 20%;
             }
@@ -193,10 +208,13 @@ body {
             }
 
             .language-switch {
-                display: flex;
 
+                display: flex;
+                width: 100%;
+                justify-content: center;
                 padding: 0;
-                padding-left: 10%;
+                padding-top: 2vh;
+                padding-bottom: 2vh;
                 font-size: 4vh;
             }
 
