--- a/shweb/static/css/style.css
+++ b/shweb/static/css/style.css
@@ -32,6 +32,8 @@ body {
   background-attachment:fixed;
 }
 
+
+
 /* HEADER */
 .header {
   padding-top: 30px;
@@ -43,9 +45,8 @@ body {
 
 
 .bandlogo {
-  height: 120px;
-  max-height: 100%;
-  max-width: 100%;
+  height: 90px;
+  min-width: 100%;
   transition: all 0.3s ease;
 }
 
