--- a/shweb/templates/base.html
+++ b/shweb/templates/base.html
@@ -38,6 +38,7 @@
                 <div class="dropdown">
                     <button class="dropbtn">{{_('discogs')}}</button>
                     <div class="dropdown-content">
+                        <a href="/releases/reki{{session['lang_arg']}}">{{_('album')}} "реки"</a>
                         <a href="/releases/march{{session['lang_arg']}}">{{_('single')}} "марш пустых знамён"</a>
                         <a href="/releases/unsleep{{session['lang_arg']}}">{{_('single')}} "бессонница"</a>
                         <a href="/releases/traces{{session['lang_arg']}}">{{_('single')}} "тропы"</a>
