--- a/shweb/templates/feed.html
+++ b/shweb/templates/feed.html
@@ -15,10 +15,9 @@
 {% block loaded_scripts %}
 <script type="text/javascript">
     var width = document.querySelector('.content').clientWidth;
-    var wrapper_h = document.querySelector('.wrapper').clientHeight;
     var header_h = document.querySelector('.header').clientHeight;
     var footer_h = document.querySelector('.footer').clientHeight;
-    var height = wrapper_h - header_h - footer_h
+    var height = window.innerHeight - header_h - footer_h
     VK.Widgets.Group("vk_groups", {
         mode: 4,
         width: width,
