--- a/shweb/templates/mobile/base.html
+++ b/shweb/templates/mobile/base.html
@@ -38,8 +38,8 @@
         <div class="content">{% block content %}{% endblock %}</div>
         <div class="menu-main">
             <button class="ham">
-                <img class="menuIcon" src="/static/images/icons/menu.png">
-                <img class="xIcon" src="/static/images/icons/close.png">
+                <img class="menuIcon" src="/static/images/icons/menu.svg">
+                <img class="xIcon" src="/static/images/icons/close.svg">
             </button>
             <ul class="menu">
                 <div class="menu-nav">
@@ -52,6 +52,7 @@
                     </li>
                     <div class="dropdown-content" id="release-links">
                         <div class="links-container">
+                            <a href="/releases/reki{{session['lang_arg']}}">{{_('album')}} "реки"</a>
                             <a href="/releases/march{{session['lang_arg']}}">{{_('single')}} "марш пустых знамён"</a>
                             <a href="/releases/unsleep{{session['lang_arg']}}">{{_('single')}} <br> "бессонница"</a>
                             <a href="/releases/traces{{session['lang_arg']}}">{{_('single')}} <br> "тропы"</a>
