--- a/shweb/templates/mobile/base.html
+++ b/shweb/templates/mobile/base.html
@@ -16,9 +16,9 @@
     <meta name="description" content="{{_('description')}}">
     <meta property="og:description" content="{{_('description')}}">
     <meta name="twitter:description" content="{{_('description')}}">
-    <meta name="image" content="http://www.stanethuzhe.ru/static/images/og-home.jpg">
-    <meta property="og:image" content="http://www.stanethuzhe.ru/static/images/og-home.jpg">
-    <meta name="twitter:image" content="http://www.stanethuzhe.ru/static/images/og-home.jpg">
+    <meta name="image" content="http://www.stanethuzhe.ru/static/images/og-home.png">
+    <meta property="og:image" content="http://www.stanethuzhe.ru/static/images/og-home.png">
+    <meta name="twitter:image" content="http://www.stanethuzhe.ru/static/images/og-home.png">
     <meta name="url" content="http://www.stanethuzhe.ru/">
     <meta name="twitter:card" content="summary_large_image">
     {% endblock %}
