--- a/shweb/templates/admin_login.html
+++ b/shweb/templates/admin_login.html
@@ -1,7 +1,7 @@
-<div>
-    <label for="fname">First name:</label><br>
-    <input type="text" id="fname" name="fname" value="John"><br>
-    <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname" value="Doe"><br><br>
-    <input type="submit" value="Submit">
-</div>
+<form method="POST">
+    <label for="username"><b>Username</b></label>
+    <input name="username">
+    <label for="password"><b>Password</b></label>
+    <input name="password">
+    <input type="submit">
+</form>
