bandcamp player loads images not stable

--- a/shweb/templates/release.html
+++ b/shweb/templates/release.html
@@ -19,7 +19,8 @@
 {% endblock %}
 {% block content %}
 <div class="media-side">
-    <div style="max-width: 700px;">
+    <div class="cover"
+        style="max-width: 700px; background-image: url(../static/releases/{{release_data['release-id']}}/cover.jpg); background-size: contain;">
         <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 100%;">
             <iframe
                 src="https://bandcamp.com/EmbeddedPlayer/{{release_data['bandcamp-id']}}/size=large/bgcol=000000/linkcol=ffffff/tracklist=true/transparent=true/"
