--- a/shweb/templates/index.html
+++ b/shweb/templates/index.html
@@ -6,7 +6,8 @@
 {% block content %}
 <!-- <img src="/static/images/collage.jpg" width="1800" height="500" class="main-page-photo"> -->
 <a href="/releases/reki{{session['lang_arg']}}" class="main-release">
-    <img src="static/releases/reki/cover.jpg" width="1600" height="1600" class="main-release-photo">
+    <img src="{{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/reki/cover.jpg" width="1600" height="1600"
+        class="main-release-photo">
     <div class="main-release-tittle"> {{_('album')}} "реки" {{_("available")}}</div>
 </a>
 {% endblock %}
