--- a/shweb/templates/release.html
+++ b/shweb/templates/release.html
@@ -20,7 +20,7 @@
 {% block content %}
 <div class="media-side">
     <div class="cover"
-        style="max-width: 700px; background-image: url(../static/releases/{{release_data['release-id']}}/cover.jpg); background-size: contain;">
+        style="max-width: 700px; background-image: url({{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/{{release_data['release-id']}}/cover.jpg); background-size: contain;">
         <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 100%;">
             <iframe
                 src="https://bandcamp.com/EmbeddedPlayer/{{release_data['bandcamp-id']}}/size=large/bgcol=000000/linkcol=ffffff/tracklist=true/transparent=true/"
