--- a/shweb/templates/base.html
+++ b/shweb/templates/base.html
@@ -21,6 +21,7 @@
     <meta name="url" content="http://www.stanethuzhe.ru/">
     <meta name="twitter:card" content="summary_large_image">
     {% endblock %}
+    {% block style %}{% endblock %}
     {% block scripts %}{% endblock %}
 </head>
 
