--- a/shweb/templates/index.html
+++ b/shweb/templates/index.html
@@ -1,13 +1,7 @@
 {% extends "base.html" %}
-{% block head %}
-{{ super() }}
-<link rel='stylesheet' href="/static/css/home.css">
+{% block style %}
+{{style_code|safe}}
 {% endblock %}
 {% block content %}
-<!-- <img src="/static/images/collage.jpg" width="1800" height="500" class="main-page-photo"> -->
-<a href="/releases/reki{{session['lang_arg']}}" class="main-release">
-    <img src="{{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/reki/cover.jpg" width="1600" height="1600"
-        class="main-release-photo">
-    <div class="main-release-tittle"> {{_('album')}} "реки" {{_("available")}}</div>
-</a>
+{{content_code|safe}}
 {% endblock %}
