--- a/shweb/templates/mobile/base.html
+++ b/shweb/templates/mobile/base.html
@@ -22,6 +22,7 @@
     <meta name="url" content="http://www.stanethuzhe.ru/">
     <meta name="twitter:card" content="summary_large_image">
     {% endblock %}
+    {% block style %}{% endblock %}
     {% block scripts %}{% endblock %}
 </head>
 
