not_found pages and start of release parameters

--- a/shweb/templates/admin/index.html
+++ b/shweb/templates/admin/index.html
@@ -19,4 +19,7 @@
 <a href="/admin/release?action=new" class="release-new">
     <button class="release-new-btn">{{_('add song')}}</button>
 </a>
+<a href="/admin/index-edit" class="index-edit">
+    <button class="index-edit-btn">{{_('edit home page')}}</button>
+</a>
 {% endblock %}
