--- a/shweb/templates/admin/release.html
+++ b/shweb/templates/admin/release.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 {% block head %}
 {{ super() }}
-<link rel='stylesheet' href="/static/css/home.css">
+<link rel='stylesheet' href="/static/css/admin/release.css">
 {% endblock %}
 {% block loaded_scripts %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -9,116 +9,135 @@
 {% endblock %}
 {% block content %}
 
+{% if action == "new" %}
+    <h2> Add new release </h2>
+    {% else %}
+    <h2> Update release </h2>
+{% endif%}
+
 <div class="error-message"></div>
 
 <form id="CreateRelease">
-    <div class="parameter">
-        <img id="output" />
-        <div class="description"> Cover (jpeg)*:</div>
-        <input type="file" name="cover" accept="image/jpeg" onchange="loadFile(event, 'output')" id="cover">
-    </div>
+    <div class="release-blank">
+        <div class="side">
+            <div class="image-parameter">
+                <div class="description"> Cover (jpeg)*:</div>
+                <label for="cover" class="file-upload">
+                    <img src="/static/images/icons/upload.svg"> Upload image
+                </label>
+                <input type="file" name="cover" accept="image/jpeg" onchange="loadFile(event, 'output-cover')" id="cover">
+                <div class="output-cover-wrapper">
+                    <img id="output-cover" src="/static/images/icons/image.svg" class="output-image">
+                </div>
+            </div>
 
-    <div class="parameter">
-        <img id="output-og" />
-        <div class="description"> OG (jpeg)*: </div>
-        <input type="file" name="og" accept="image/jpeg" onchange="loadFile(event, 'output-og')">
-    </div>
-    <div class="parameter">
-        <div class="description"> Release name*: </div>
-        <input name="release_name">
-    </div>
+            <div class="image-parameter">
+                <div class="description"> OG (jpeg)*: </div>
+                <label for="og" class="file-upload">
+                    <img src="/static/images/icons/upload.svg"> Upload image
+                </label>
+                <input type="file" name="og" accept="image/jpeg" onchange="loadFile(event, 'output-og')" id="og">
+                <div class="output-og-wrapper">
+                    <img id="output-og" src="/static/images/icons/image.svg", class="output-image">
+                </div>
+            </div>
 
-    <div class="parameter">
-        <div class="description"> Release type*: </div>
-        <select name="type">
-            <option value="Single"> Single </option>
-            <option value="Album"> Album </option>
-            <option value="EP"> EP </option>
-        </select>
-    </div>
+            <h3> Service urls*: </h3>
+            <div class="parameter">
+                <div class="description"> apple: </div>
+                <input name="service_apple" type="url" placeholder="https://music.apple.com/">
+            </div>
+            <div class="parameter">
+                <div class="description"> yandex: </div>
+                <input name="service_yandex" type="url" placeholder="https://music.yandex.ru/">
+            </div>
+            <div class="parameter">
+                <div class="description"> youtube: </div>
+                <input name="service_youtube" type="url" placeholder="https://music.youtube.com/">
+            </div>
+            <div class="parameter">
+                <div class="description"> spotify: </div>
+                <input name="service_spotify" type="url" placeholder="https://open.spotify.com/">
+            </div>
+            <div class="parameter">
+                <div class="description"> boom: </div>
+                <input name="service_boom" type="url" placeholder="https://vk.com/music/">
+            </div>
+            <div class="parameter">
+                <div class="description"> amazon: </div>
+                <input name="service_amazon" type="url" placeholder="https://music.amazon.com/">
+            </div>
+            <div class="parameter">
+                <div class="description"> deezer: </div>
+                <input name="service_deezer" type="url" placeholder="http://www.deezer.com/">
+            </div>
+            <div class="parameter">
+                <div class="description"> tidal: </div>
+                <input name="service_tidal" type="url" placeholder="https://tidal.com/browse/">
+            </div>
 
-    <div class="parameter">
-        <div class="description"> Release id*: </div>
-        <input name="release_id">
-    </div>
+            <h3> Youtube videos: </h3>
+            <div class="youtube_videos">
+                <div>
+                    <a href="javascript:void(0);" class="add_button" title="Add field" id="add_youtube">
+                        <img src="add-icon.png" /></a>
+                </div>
+            </div>
+        </div>
 
-    <div class="parameter">
-        <div class="description"> Bandcamp link*: </div>
-        <input name="bandcamp_link">
-    </div>
+        <div class="side">
+            <div class="parameter">
+                <div class="description"> Release name*: </div>
+                <input name="release_name">
+            </div>
 
-    <div class="parameter">
-        <div class="description"> Date*: </div>
-        <input name="date" type="date">
-    </div>
-    <h3> Service-urls*: </h3>
-    <div class="parameter">
-        <div class="description"> apple: </div>
-        <input name="service_apple">
-    </div>
-    <div class="parameter">
-        <div class="description"> yandex: </div>
-        <input name="service_yandex">
-    </div>
-    <div class="parameter">
-        <div class="description"> youtube: </div>
-        <input name="service_youtube">
-    </div>
-    <div class="parameter">
-        <div class="description"> spotify: </div>
-        <input name="service_spotify">
-    </div>
-    <div class="parameter">
-        <div class="description"> boom: </div>
-        <input name="service_boom">
-    </div>
-    <div class="parameter">
-        <div class="description"> amazon: </div>
-        <input name="service_amazon">
-    </div>
-    <div class="parameter">
-        <div class="description"> deezer: </div>
-        <input name="service_deezer">
-    </div>
-    <div class="parameter">
-        <div class="description"> tidal: </div>
-        <input name="service_tidal">
-    </div>
-    <h3> Tracklist*: </h3>
-    <div class="tracklist">
-        <div class="track">
-            <div class="description"> Track name*: </div>
-            <input name="name" />
-            <div class="description"> Track id*: </div>
-            <input name="id" />
-            <div class="description"> Lyrics: </div>
-            <input name="lyrics" />
-            <div class="description"> Explicit: </div>
-            <input type="checkbox" name="explicit" />
-            <a href="javascript:void(0);" class="add_button" title="Add field" id="add_track">
-                <img src="add-icon.png" /></a>
+            <div class="parameter">
+                <div class="description"> Release type*: </div>
+                <select name="type">
+                    <option value="Single"> Single </option>
+                    <option value="Album"> Album </option>
+                    <option value="EP"> EP </option>
+                </select>
+            </div>
+
+            <div class="parameter">
+                <div class="description"> Release id*: </div>
+                <input name="release_id">
+            </div>
+
+            <div class="parameter">
+                <div class="description"> Date*: </div>
+                <input name="date" type="date">
+            </div>
+
+            <div class="parameter">
+                <div class="description"> Bandcamp link*: </div>
+                <input name="bandcamp_link">
+            </div>
+
+            <h3> Tracklist*: </h3>
+            <div class="tracklist">
+                <div class="track">
+                    <div class="description"> Track name*: </div>
+                    <input name="name" />
+                    <div class="description"> Track id*: </div>
+                    <input name="id" />
+                    <div class="description"> Lyrics: </div>
+                    <input name="lyrics" />
+                    <div class="description"> Explicit: </div>
+                    <input type="checkbox" name="explicit" />
+                    <a href="javascript:void(0);" class="add_button" title="Add field" id="add_track">
+                        <img src="add-icon.png" /></a>
+                </div>
+            </div>
+            <div class="parameter">
+                <div class="description"> Track id with lyrcis open by default: </div>
+                <input name="default_open_text">
+            </div>
         </div>
     </div>
 
-    <div class="parameter">
-        <div class="description"> Track id with lyrcis open by default: </div>
-        <input name="default_open_text">
-    </div>
-
-    <h3> Youtube videos: </h3>
-    <div class="youtube_videos">
-        <div>
-            <a href="javascript:void(0);" class="add_button" title="Add field" id="add_youtube">
-                <img src="add-icon.png" /></a>
-        </div>
-    </div>
-
-
-    {% if action == "new" %}
-    <input type="submit" value="create" name="new" id='Submit'>
-    {% else %}
     <input type="submit" value="save" name="edit" id='Submit'>
-    {% endif%}
 </form>
 
 
