--- a/shweb/templates/admin/release.html
+++ b/shweb/templates/admin/release.html
@@ -137,7 +137,7 @@
         </div>
     </div>
 
-    <input type="submit" value="save" name="edit" id='Submit'>
+    <input type="submit" value="save" name="edit" id='Submit' class="release-control-button">
 </form>
 
 
