--- a/shweb/templates/admin/index.html
+++ b/shweb/templates/admin/index.html
@@ -27,18 +27,18 @@
 </div>
 
 <div class="order-buttons-main">
-    <button class="save-order">{{_('save order')}}</button>
-    <button class="change-order">{{_('change order')}}</button>
+    <button class="save-order">save order</button>
+    <button class="change-order">change order</button>
     <a href="/admin/">
-        <button class="cancel-order">{{_('cancel')}}</button>
+        <button class="cancel-order">cancel</button>
     </a>
 </div>
 
 <a href="/admin/release?action=new" class="release-new">
-    <button class="release-new-btn">{{_('add song')}}</button>
+    <button class="release-new-btn">add song</button>
 </a>
 <a href="/admin/index-edit" class="index-edit">
-    <button class="index-edit-btn">{{_('edit home page')}}</button>
+    <button class="index-edit-btn">edit home page</button>
 </a>
 
 <div class="modal"></div>
