--- a/shweb/static/css/admin/release.css
+++ b/shweb/static/css/admin/release.css
@@ -1,5 +1,5 @@
 .content {
-    width: 50%;
+    width: 70%;
     background-color: rgba(0, 0, 0, 0.6);
     display: flex;
     flex-direction: column;
@@ -16,15 +16,17 @@
     flex-direction: column;
     gap: 20px;
     align-items: center;
+    width: 100%;
 }
 
 .release-blank {
     display: flex;
     gap: 20px;
+    width: 100%;
 }
 
 .side {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px
@@ -97,7 +99,7 @@ input[type=file]{
     cursor: pointer;
 }
 
-input[type=text], input[type=url] {
+input[type=text], input[type=url], input[type=date], select, select * {
     color: black;
     width: 100%;
     padding: 12px 20px;
@@ -106,4 +108,70 @@ input[type=text], input[type=url] {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+}
+
+.add_button {
+    text-decoration: none;
+    height: 20px;
+    cursor:pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-weight: bold;
+    padding: 12px 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.add_button img {
+    height: 20px;
+}
+
+.youtube-videos {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.one-line-parameter {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+}
+
+.one-line-parameter .remove_button {
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 15px;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-weight: bold;
+    padding: 12px 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.one-line-parameter img {
+    height: 100%;
+}
+
+textarea {
+    width: 100%;
+    height: 300px;
+    resize: none;
+    color: black;
+    padding: 12px 20px;
+    margin: 5px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.tracklist {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
