--- a/shweb/templates/admin/base.html
+++ b/shweb/templates/admin/base.html
@@ -25,14 +25,14 @@
             </a>
             {% endblock %}
             <div class="navbar">
-                <a href="/admin/" class="nav-link">{{_('main')}}</a>
+                <a href="/admin/" class="nav-link">main</a>
                 <div class="user">
                     <img src="/static/images/icons/account.svg" alt="" class="account-icon">
                     <div class="user-controls">
                         <div class="username"> {{get_user_info_from_token().nickname}} </div>
                         <form method="POST" action="/admin/logout">
                             <input type="hidden" name="event" value="logout">
-                            <input type="submit" name="logout" value="{{_('logout')}}" class="control-button">
+                            <input type="submit" name="logout" value="logout" class="control-button">
                         </form>
                     </div>
                 </div>
