--- a/shweb/templates/admin/release.html
+++ b/shweb/templates/admin/release.html
@@ -121,14 +121,14 @@
             </div>
             <div class="parameter">
                 <div class="description"> Track id with lyrcis to open by default: </div>
-                <select name="default-open">
+                <select name="default-open" id="default-open-track">
                     <option value=""></option>
                 </select>
             </div>
         </div>
     </div>
 
-    <input type="submit" value="save" name="edit" id='Submit' class="release-control-button">
+    <input type="submit" value="save" name="save" id='Submit' class="release-control-button">
 </form>
 
 
