--- a/shweb/templates/admin/release.html
+++ b/shweb/templates/admin/release.html
@@ -17,119 +17,120 @@
 
 <div class="error-message"></div>
 
-<form id="CreateRelease">
-    <div class="release-blank">
-        <div class="side">
-            <div class="image-parameter">
-                <div class="description"> Cover (jpeg)*:</div>
-                <label for="cover" class="file-upload">
-                    <img src="/static/images/icons/upload.svg"> Upload image
-                </label>
-                <input type="file" name="cover" accept="image/jpeg" onchange="loadFile(event, 'output-cover')" id="cover">
-                <div class="output-cover-wrapper">
-                    <img id="output-cover" src="/static/images/icons/image.svg" class="output-image">
-                </div>
-            </div>
-
-            <div class="image-parameter">
-                <div class="description"> OG (jpeg)*: </div>
-                <label for="og" class="file-upload">
-                    <img src="/static/images/icons/upload.svg"> Upload image
-                </label>
-                <input type="file" name="og" accept="image/jpeg" onchange="loadFile(event, 'output-og')" id="og">
-                <div class="output-og-wrapper">
-                    <img id="output-og" src="/static/images/icons/image.svg", class="output-image">
-                </div>
-            </div>
-
-            <h3> Service urls*: </h3>
-            <div class="parameter">
-                <div class="description"> apple: </div>
-                <input name="service_apple" type="url" placeholder="https://music.apple.com/">
-            </div>
-            <div class="parameter">
-                <div class="description"> yandex: </div>
-                <input name="service_yandex" type="url" placeholder="https://music.yandex.ru/">
-            </div>
-            <div class="parameter">
-                <div class="description"> youtube: </div>
-                <input name="service_youtube" type="url" placeholder="https://music.youtube.com/">
-            </div>
-            <div class="parameter">
-                <div class="description"> spotify: </div>
-                <input name="service_spotify" type="url" placeholder="https://open.spotify.com/">
-            </div>
-            <div class="parameter">
-                <div class="description"> boom: </div>
-                <input name="service_boom" type="url" placeholder="https://vk.com/music/">
-            </div>
-            <div class="parameter">
-                <div class="description"> amazon: </div>
-                <input name="service_amazon" type="url" placeholder="https://music.amazon.com/">
-            </div>
-            <div class="parameter">
-                <div class="description"> deezer: </div>
-                <input name="service_deezer" type="url" placeholder="http://www.deezer.com/">
-            </div>
-            <div class="parameter">
-                <div class="description"> tidal: </div>
-                <input name="service_tidal" type="url" placeholder="https://tidal.com/browse/">
-            </div>
-
-            <h3> Youtube videos: </h3>
-            <div class="youtube-videos">
-                <div>
-                    <a href="javascript:void(0);" class="add_button" title="Add field" id="add_youtube">
-                        Add youtube video
-                        <img src="/static/images/icons/add.svg" />
-                    </a>
-                </div>
+<div class="release-blank" id="release_blank">
+    <div class="side">
+        <div class="image-parameter">
+            <div class="description"> Cover (jpeg)*:</div>
+            <label for="cover" class="file-upload">
+                <img src="/static/images/icons/upload.svg"> Upload image
+            </label>
+            <input type="file" name="cover" accept="image/jpeg" onchange="loadFile(event, 'output-cover')" id="cover">
+            <div class="output-cover-wrapper">
+                <img id="output-cover" src="/static/images/icons/image.svg" class="output-image">
             </div>
         </div>
 
-        <div class="side">
-            <div class="parameter">
-                <div class="description"> Release name*: </div>
-                <input name="release_name" type="text" placeholder="">
+        <div class="image-parameter">
+            <div class="description"> OG (jpeg)*: </div>
+            <label for="og" class="file-upload">
+                <img src="/static/images/icons/upload.svg"> Upload image
+            </label>
+            <input type="file" name="og" accept="image/jpeg" onchange="loadFile(event, 'output-og')" id="og">
+            <div class="output-og-wrapper">
+                <img id="output-og" src="/static/images/icons/image.svg", class="output-image">
             </div>
+        </div>
 
-            <div class="parameter">
-                <div class="description"> Release type*: </div>
-                <select name="type">
-                    <option value="Album"> Album </option>
-                    <option value="Single"> Single </option>
-                    <option value="EP"> EP </option>
-                </select>
-            </div>
+        <h3> Service urls*: </h3>
+        <div class="parameter">
+            <div class="description"> apple: </div>
+            <input name="service_apple" type="url" placeholder="https://music.apple.com/">
+        </div>
+        <div class="parameter">
+            <div class="description"> yandex: </div>
+            <input name="service_yandex" type="url" placeholder="https://music.yandex.ru/">
+        </div>
+        <div class="parameter">
+            <div class="description"> youtube: </div>
+            <input name="service_youtube" type="url" placeholder="https://music.youtube.com/">
+        </div>
+        <div class="parameter">
+            <div class="description"> spotify: </div>
+            <input name="service_spotify" type="url" placeholder="https://open.spotify.com/">
+        </div>
+        <div class="parameter">
+            <div class="description"> boom: </div>
+            <input name="service_boom" type="url" placeholder="https://vk.com/music/">
+        </div>
+        <div class="parameter">
+            <div class="description"> amazon: </div>
+            <input name="service_amazon" type="url" placeholder="https://music.amazon.com/">
+        </div>
+        <div class="parameter">
+            <div class="description"> deezer: </div>
+            <input name="service_deezer" type="url" placeholder="http://www.deezer.com/">
+        </div>
+        <div class="parameter">
+            <div class="description"> tidal: </div>
+            <input name="service_tidal" type="url" placeholder="https://tidal.com/browse/">
+        </div>
 
-            <div class="parameter">
-                <div class="description"> Date*: </div>
-                <input name="date" type="date">
-            </div>
-
-            <div class="parameter">
-                <div class="description"> Bandcamp link*: </div>
-                <input name="bandcamp_link" type="url" placeholder="https://stanethuzhe.bandcamp.com/">
-            </div>
-
-            <h3> Tracklist*: </h3>
-            <div class="tracklist">
-                <a href="javascript:void(0);" class="add_button" title="Add field" id="add_track">
-                    Add track
+        <h3> Youtube videos: </h3>
+        <div class="youtube-videos">
+            <div>
+                <a href="javascript:void(0);" class="add_button" title="Add field" id="add_youtube">
+                    Add youtube video
                     <img src="/static/images/icons/add.svg" />
                 </a>
-            </div>
-            <div class="parameter">
-                <div class="description"> Track id with lyrcis to open by default: </div>
-                <select name="default-open" id="default-open-track">
-                    <option value=""></option>
-                </select>
             </div>
         </div>
     </div>
 
-    <input type="submit" value="save" name="save" id='Submit' class="release-control-button">
-</form>
+    <div class="side">
+        <div class="parameter">
+            <div class="description"> Release name*: </div>
+            <input name="release_name" type="text" placeholder="">
+        </div>
+
+        <div class="parameter">
+            <div class="description"> Release type*: </div>
+            <select name="type">
+                <option value="Album"> Album </option>
+                <option value="Single"> Single </option>
+                <option value="EP"> EP </option>
+            </select>
+        </div>
+
+        <div class="parameter">
+            <div class="description"> Date*: </div>
+            <input name="date" type="date">
+        </div>
+
+        <div class="parameter">
+            <div class="description"> Bandcamp link*: </div>
+            <input name="bandcamp_link" type="url" placeholder="https://stanethuzhe.bandcamp.com/">
+        </div>
+
+        <h3> Tracklist*: </h3>
+        <div class="tracklist">
+            <a href="javascript:void(0);" class="add_button" title="Add field" id="add_track">
+                Add track
+                <img src="/static/images/icons/add.svg" />
+            </a>
+        </div>
+        <div class="parameter">
+            <div class="description"> Track id with lyrcis to open by default: </div>
+            <select name="default-open" id="default-open-track">
+                <option value=""></option>
+            </select>
+        </div>
+    </div>
+</div>
+
+<div class="release-control-buttons">
+    <input type="submit" value="save" name="save" id='submit-release' class="release-control-button">
+    <input type="submit" value="cancel" class="release-control-button" onclick="location.href='/admin/';">
+</div>
 
 
 {% endblock %}
