--- a/shweb/templates/admin/release.html
+++ b/shweb/templates/admin/release.html
@@ -44,35 +44,35 @@
         <h3> Service urls*: </h3>
         <div class="parameter">
             <div class="description"> apple: </div>
-            <input name="service_apple" type="url" placeholder="https://music.apple.com/">
+            <input name="service_apple" id="apple" type="url" placeholder="https://music.apple.com/">
         </div>
         <div class="parameter">
             <div class="description"> yandex: </div>
-            <input name="service_yandex" type="url" placeholder="https://music.yandex.ru/">
+            <input name="service_yandex" id="yandex" type="url" placeholder="https://music.yandex.ru/">
         </div>
         <div class="parameter">
             <div class="description"> youtube: </div>
-            <input name="service_youtube" type="url" placeholder="https://music.youtube.com/">
+            <input name="service_youtube" id="youtube" type="url" placeholder="https://music.youtube.com/">
         </div>
         <div class="parameter">
             <div class="description"> spotify: </div>
-            <input name="service_spotify" type="url" placeholder="https://open.spotify.com/">
+            <input name="service_spotify" id="spotify" type="url" placeholder="https://open.spotify.com/">
         </div>
         <div class="parameter">
             <div class="description"> boom: </div>
-            <input name="service_boom" type="url" placeholder="https://vk.com/music/">
+            <input name="service_boom" id="boom" type="url" placeholder="https://vk.com/music/">
         </div>
         <div class="parameter">
             <div class="description"> amazon: </div>
-            <input name="service_amazon" type="url" placeholder="https://music.amazon.com/">
+            <input name="service_amazon" id="amazon" type="url" placeholder="https://music.amazon.com/">
         </div>
         <div class="parameter">
             <div class="description"> deezer: </div>
-            <input name="service_deezer" type="url" placeholder="http://www.deezer.com/">
+            <input name="service_deezer" id="deezer" type="url" placeholder="http://www.deezer.com/">
         </div>
         <div class="parameter">
             <div class="description"> tidal: </div>
-            <input name="service_tidal" type="url" placeholder="https://tidal.com/browse/">
+            <input name="service_tidal" id="tidal" type="url" placeholder="https://tidal.com/browse/">
         </div>
 
         <h3> Youtube videos: </h3>
